--- a/style.css
+++ b/style.css
@@ -49,29 +49,33 @@
     background-size: cover;
     background-position: center;
     padding: 80px;
+    width: 100%;
+    height: 580px;
     
     
 }
 h4 {
-    font-size: 14px;
+    font-size: 22px;
     color: #000000;
     font-weight: 200;
 }
 h2 {
-   font-size: 32px;
+   font-size: 50px;
     color: #000000;
     font-weight: 700; 
 }
 h1 {
-  font-size: 32px;
+  font-size: 50px;
   color: #036f5e;
   font-weight: 700;  
 }
 p {
-   font-size: 14px;
+   font-size: 22px;
     color: #131313;
+    margin-bottom: 30px;
     
 }
+
 .hero_button {
     background-image: url("img/button.png");
     background-repeat: no-repeat;
@@ -79,7 +83,13 @@ p {
     background-position: center;
     gap: 50px;
     text-decoration: none;
+    background-color: #ff6d05;
+    padding: 10px;
+    margin: 10px;
 
+}
+.hero_button:hover {
+    color: #036f5e;
 }
 /*FEATURES SECTION*/
 .features {
@@ -594,6 +604,7 @@ p {
     align-items: center;
     background-image: url("img/banner/b2.jpg");
     gap: 20px;
+    
 }
 .exploreContent {
     flex-direction: column;
@@ -1105,16 +1116,126 @@ p {
     align-content: center;
     flex-wrap: wrap;
     justify-content: space-between;
-    flex-direction: column;
+    justify-content: center;
+    padding: 30px;
+    margin: 20px;
+    gap: 20px;
+    
 }
 .buy-free {
+    
     background-image: url("img/banner/b17.jpg");
-    margin: 10px auto;
-    padding: 20px;
+    padding: 30px;
+    margin: 20px;
     align-items: center;
-    justify-items: center;
-    width: 300px;
-    height: auto;
+    
+    width: 375px;
+    height: 200px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    
+}
+.buy-free h2 {
+    margin-left: 5px;
+    color: #212121;
+    font-size: 10px ;
+    font-weight: 100;
+    line-height: 10px;
+    margin-bottom: 10px;
+    
+}
+.buy-free h1 {
+    margin-left: 5px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 10px;
+    margin-bottom: 10px;
+}
+.buy-free p1 {
+    margin-left: 5px;
+    color: #212121;
+    font-size: 10px ;
+    font-weight: 100;
+     line-height: 10px;
+    margin-bottom: 10px;
+}
+.btn-learn {
+
+    background-color: transparent;
+     padding: 2px;
+    margin: 2px;
+    margin-left: 5px;
+      line-height: 10px;
+    margin-top: 10px;
+}
+
+.btn-free p {
+    color: #fff;
+    font-size: 8px;
+    text-align: center;
+    padding: 2px;
+    margin: 0px;
+    
+}
+.upcoming {
+    
+    padding: 30px;
+    margin: 20px;
+    align-items: center;
+    
+    width: 375px;
+    height: 200px;
+    background-image: url("img/banner/b10.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    
+}
+
+.upcoming h2 {
+    
+    margin-left: 5px;
+    color: #212121;
+    font-size: 10px ;
+    font-weight: 100;
+    line-height: 10px;
+    margin-bottom: 10px;
+}
+.upcoming h1 {
+    margin-left: 5px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 10px;
+    margin-bottom: 10px;
+}
+.upcoming p {
+    
+    margin-left: 5px;
+    color: #212121;
+    font-size: 10px ;
+    font-weight: 100;
+     line-height: 10px;
+    margin-bottom: 10px;
+}
+.btn-upcomming {
+    
+    padding: 2px;
+    margin: 2px;
+    margin-left: 5px;
+    line-height: 10px;
+    margin-top: 10px;
+}
+
+.btn-upcomming p {
+    background-color: #036f5e;
+    color: #FFF;
+    font-size: 8px;
+    text-align: center;
+    padding: 5px;
+    margin: 0px;
 }
 
 
