--- a/style.css
+++ b/style.css
@@ -666,6 +666,7 @@ p {
 /*collection section*/
 .collection {
     
+    
     justify-content: space-between;
     align-content: center;
     justify-content: center;
@@ -1137,12 +1138,11 @@ p {
     
 }
 .buy-free h2 {
-    margin-left: 5px;
     color: #212121;
-    font-size: 10px ;
-    font-weight: 100;
-    line-height: 10px;
-    margin-bottom: 10px;
+    font-size: 11px;
+    padding-top: 30px;
+    margin-left: 10px;
+   
     
 }
 .buy-free h1 {
@@ -1195,13 +1195,11 @@ p {
 }
 
 .upcoming h2 {
-    
-    margin-left: 5px;
-    color: #212121;
-    font-size: 10px ;
-    font-weight: 100;
-    line-height: 10px;
-    margin-bottom: 10px;
+     color: #212121;
+    font-size: 11px;
+    padding-top: 30px;
+    margin-left: 10px;
+
 }
 .upcoming h1 {
     margin-left: 5px;
@@ -1237,9 +1235,90 @@ p {
     padding: 5px;
     margin: 0px;
 }
-
-
-
+.divisionC {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+    align-content: last baseline;
+    
+}
+.seasonal {
+    padding: 0px;
+    margin: 0px;
+    align-items: center;
+    margin-left: 10px;
+    gap: 20px;
+    width: 260px;
+    height: 200px;
+    background-image: url("img/banner/b7.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    
+}
+.seasonal h1 {
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 700;
+     padding-top: 70px;
+    margin-left: 10px;
+}
+.seasonal p {
+    
+    color: #e94545;
+    font-size: 14px;
+    margin-left: 15px;
+}
+.footwear {
+    padding: 0px;
+    margin: 0px;
+    align-items: center;
+    margin-left: 10px;
+    gap: 20px;
+    width: 260px;
+    height: 200px;
+    background-image: url("img/banner/b4.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+}
+.footwear h1 {
+      color: #FFF;
+    font-size: 14px;
+    font-weight: 700;
+     padding-top: 70px;
+    margin-left: 10px;
+}
+.footwear p {
+    color: #e94545;
+    font-size: 14px;
+    margin-left: 15px;
+}
+.seasona2 {
+     padding: 0px;
+    margin: 0px;
+    align-items: center;
+    margin-left: 10px;
+    gap: 20px;
+    width: 260px;
+    height: 200px;
+    background-image: url("img/banner/b18.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+}
+.seasona2 h1 {
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 700;
+     padding-top: 70px;
+    margin-left: 10px;
+}
+.seasona2 p  {
+    color: #e94545;
+    font-size: 14px;
+    margin-left: 15px;
+}
 
 
 
